--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -1,3 +1,36 @@
+.content {
+  position: relative;
+  width: 100%;
+  /*height: 500px;*/
+}
+
+#receiveMsg {
+  position: absolute;
+  height: 100%;
+  width: 60%;
+  /*overflow: auto;*/
+}
+
+#content-right {
+  position: fixed;
+  padding-top: 1em;
+  height: 90%;
+  width: 30%;
+  background-color: #a9a9a9;
+  right: 0;
+}
+
+#chatm, #usernm {
+  width: 90%;
+}
+
+#in-content {
+  background-color: white;
+  margin-top: 2em;
+  height: 80%;
+  margin: 10px 10px;
+}
+
 .center {
   text-align: center;
   width: 100%;
