--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,54 +1,5 @@
-<script src="socket.io/socket.io.js"></script>
-<script type="text/javascript">
-var socket = io();
- 
-socket.on('connect', function(msg) 
-{
-  console.log("Connect");
-});
- 
-// メッセージを受けたとき
-socket.on('message', function(msg) 
-{
-  console.log("ReceiveMessage");
-  // メッセージを画面に表示する
-  document.getElementById("receiveMsg").innerHTML += `<p>${msg.value}</p>`;
-});
- 
-// メッセージを送る
-function SendMsg() 
-{
-  console.log("SendMessage");
-  var msg = document.getElementById("message").value;
-  // メッセージを発射する
-  socket.emit('message', { value: msg });
-}
-// 切断する
-function DisConnect() {
-  console.log("DisConnect");
-  socket.emit('message', { value: "切断しました"})
-  // socketを切断する
-  socket.disconnect();
-}
-</script>
- 
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title><%= title %></title>
-    <link rel='stylesheet' href='stylesheets/style.css' />
-  </head>
-  <body>
- 
-  <h1>チャット</h1>
-  <br>
-  <div id="form">
-  <input type="text" id="message" value="">
-  <input type="button" value="メッセージを送る" onclick="SendMsg()">
-  <input type="button" value="切断する" onclick="DisConnect()">
-  </div>
-  <div id="receiveMsg"></div>
- 
-  </body>
-</html>
+<% include common/_header %>
+
+<p>埋め込みコンテンツ</p>
+
+<% include common/_footer %>
