--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -19,11 +19,11 @@
     <div id="in-content">
       <iframe src="http://www.tokushima-u.ac.jp" frameborder="0" style="height: 90%; width: 100%;"></iframe>
     </div>
-    <div id="cross-content">
+    <!-- <div id="cross-content">
       <h2>githubAPIから取得したデータ</h2>
       <ul id="repo-list">
       </ul>
-    </div>
+    </div> -->
   </div>
 </div>
 
